--- a/html/index.html
+++ b/html/index.html
@@ -212,7 +212,7 @@ $(function() {
 
 		var iw = 1280;
 		var ih = 720;
-		var ir = 317;		ir = 284;
+		var ir = 317;		ir = 283;
 		var lx = 320;
 		var ly = 398;		//ly = 394;
 		var rx = 958;
@@ -342,7 +342,7 @@ $(function() {
 			reconnecting = false;
 
 			if (mesh && mesh.material)
-			if (counter++ % 2)
+			//if (counter++ % 2)
 				mesh.material.map.needsUpdate = true;
 
 			//console.log(node.rotation);
